HashExtractor: small improvement.